# terminal-weather

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
