[package]
name = "terminal-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
colored = "2.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
